template.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  mykeypair: 
    Type: AWS::EC2::KeyPair::KeyName
    Description: Nombre del par de claves para acceder a la instancia
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  VolumeSize:
    Type: Number
    Default: 20
    Description: Tamaño del volumen EBS en GB
  VolumeType:
    Type: String
    Default: gp3
    AllowedValues:
      - gp2
      - gp3
      - io1
    Description: Tipo de volumen EBS (gp2, gp3, io1)
  SSHFromIP:
    Type: String
    Default: 186.121.35.177/32  # IP pública conocida con máscara /32 para una sola IP
    Description: La IP desde la que se permiten conexiones SSH
  HTTPFromIP:
    Type: String
    Default: 186.121.35.177/32  # IP pública conocida con máscara /32 para una sola IP
    Description: La IP desde la que se permiten conexiones HTTP
  HTTPSFromIP:
    Type: String
    Default: 186.121.35.177/32  # IP pública conocida con máscara /32 para una sola IP
    Description: La IP desde la que se permiten conexiones HTTPS

Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0648742c7600c103f
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref mykeypair
      BlockDeviceMappings:
        - DeviceName: "/dev/sdm"
          Ebs:
            VolumeType: !Ref VolumeType
            DeleteOnTermination: true
            VolumeSize: !Ref VolumeSize
      SecurityGroupIds:
        - !Ref ServerSecurityWeb
        - !Ref ServerSecurityPrivate

  ServerSecurityWeb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and HTTPS connections from a specific IP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref HTTPFromIP
          Description: Allow HTTP from specific IP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref HTTPSFromIP
          Description: Allow HTTPS from specific IP
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic

  ServerSecurityPrivate:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH connections from a specific IP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHFromIP
          Description: Allow SSH from specific IP
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic
